--- a/MavenProject/test-output/index.html
+++ b/MavenProject/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\Samir\eclipse-workspace\MavenProject\testng.xml</span>
+                    <span>C:\Users\Samir\git\Practice02\MavenProject\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -169,7 +169,7 @@
                   <a name="toVerifyLogInPage">
                   </a> <!-- toVerifyLogInPage -->
                   <span class="method-name">toVerifyLogInPage</span>
-                  <div class="stack-trace">java.lang.AssertionError: The password that you&apos;ve entered is incorrect. Forgotten password? expected [(2) Facebook] but found [Log in to Facebook]
+                  <div class="stack-trace">java.lang.AssertionError: The password that you&apos;ve entered is incorrect. Forgotten password? expected [(2) Facebook] but found []
 	at TestPack.ToVerifyFacebookHomePage.toVerifyLogInPage(ToVerifyFacebookHomePage.java:95)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
@@ -252,7 +252,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Samir\eclipse-workspace\MavenProject\testng.xml</span>
+            <span class="header-content">C:\Users\Samir\git\Practice02\MavenProject\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -308,36 +308,36 @@ data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyaddToCart')
 data.setCell(0, 2, 'TempTestNg2.ToVerifyProductPage')
-data.setCell(0, 3, 33789);
+data.setCell(0, 3, 26535);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyAddtoWishListButton')
+data.setCell(1, 1, 'verifyBuyNowButton')
 data.setCell(1, 2, 'TempTestNg2.ToVerifyProductPage')
-data.setCell(1, 3, 30731);
+data.setCell(1, 3, 20773);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyBuyNowButton')
-data.setCell(2, 2, 'TempTestNg2.ToVerifyProductPage')
-data.setCell(2, 3, 23384);
+data.setCell(2, 1, 'toVerifyLogInPage')
+data.setCell(2, 2, 'TestPack.ToVerifyFacebookHomePage')
+data.setCell(2, 3, 16081);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'toVerifySignUpPage')
-data.setCell(3, 2, 'TestPack.ToVerifyFacebookHomePage')
-data.setCell(3, 3, 13501);
+data.setCell(3, 1, 'verifyAddtoWishListButton')
+data.setCell(3, 2, 'TempTestNg2.ToVerifyProductPage')
+data.setCell(3, 3, 15120);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'toVerifyLogInPage')
-data.setCell(4, 2, 'TestPack.ToVerifyFacebookHomePage')
-data.setCell(4, 3, 11001);
+data.setCell(4, 1, 'verifySandalsButton')
+data.setCell(4, 2, 'TempTestNg2.ToVerifyAllTab')
+data.setCell(4, 3, 6418);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyHandbagsButton')
-data.setCell(5, 2, 'TempTestNg2.ToVerifyAllTab')
-data.setCell(5, 3, 10585);
+data.setCell(5, 1, 'toVerifySignUpPage')
+data.setCell(5, 2, 'TestPack.ToVerifyFacebookHomePage')
+data.setCell(5, 3, 6015);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'verifySandalsButton')
+data.setCell(6, 1, 'verifyHandbagsButton')
 data.setCell(6, 2, 'TempTestNg2.ToVerifyAllTab')
-data.setCell(6, 3, 7074);
+data.setCell(6, 3, 2242);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 minutes</span>
+              <span class="suite-total-time">Total running time: 4 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -373,156 +373,156 @@ return data;
               <div class="chronological-class-name">TestPack.ToVerifyFacebookHomePage</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">launchBrowser(Chrome)</span>
-                <span class="method-start">6646 ms</span>
+                <span class="method-start">11078 ms</span>
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TempTestNg2.ToVerifyProductPage</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">launchBrowser(Chrome)</span>
-                <span class="method-start">11212 ms</span>
+                <span class="method-start">14133 ms</span>
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestPack.ToVerifyFacebookHomePage</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">createPOMObjects</span>
-                <span class="method-start">16633 ms</span>
+                <span class="method-start">17516 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">verifyHomePage</span>
-                <span class="method-start">16838 ms</span>
+                <span class="method-start">18057 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">toVerifyLogInPage</span>
-                <span class="method-start">25590 ms</span>
+                <span class="method-start">26425 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">logOutFromaaplication([TestResult name=toVerifyLogInPage status=FAILURE method=ToVerifyFacebookHomePage.toVerifyLogInPage(...)</span>
-                <span class="method-start">36605 ms</span>
+                <span class="method-start">42516 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">verifyHomePage</span>
-                <span class="method-start">37050 ms</span>
+                <span class="method-start">43300 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">toVerifySignUpPage</span>
-                <span class="method-start">40852 ms</span>
+                <span class="method-start">45873 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">logOutFromaaplication([TestResult name=toVerifySignUpPage status=FAILURE method=ToVerifyFacebookHomePage.toVerifySignUpPag...)</span>
-                <span class="method-start">54358 ms</span>
+                <span class="method-start">51894 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">cleanPOMObjects</span>
-                <span class="method-start">54858 ms</span>
+                <span class="method-start">52344 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TempTestNg2.ToVerifyAllTab</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">createPOMObjects</span>
-                <span class="method-start">54859 ms</span>
+                <span class="method-start">52346 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">toVerifyAllbutton</span>
-                <span class="method-start">54924 ms</span>
+                <span class="method-start">52358 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyHandbagsButton</span>
-                <span class="method-start">73948 ms</span>
+                <span class="method-start">76874 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">sscrenshot([TestResult name=verifyHandbagsButton status=SUCCESS method=ToVerifyAllTab.verifyHandbagsButton()[pr...)</span>
-                <span class="method-start">84542 ms</span>
+                <span class="method-start">79120 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">toVerifyAllbutton</span>
-                <span class="method-start">84545 ms</span>
+                <span class="method-start">79122 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifySandalsButton</span>
-                <span class="method-start">100917 ms</span>
+                <span class="method-start">100731 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">sscrenshot([TestResult name=verifySandalsButton status=SUCCESS method=ToVerifyAllTab.verifySandalsButton()[pri:...)</span>
-                <span class="method-start">107993 ms</span>
+                <span class="method-start">107151 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">cleanPOMObjects</span>
-                <span class="method-start">107994 ms</span>
+                <span class="method-start">107152 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TempTestNg2.ToVerifyProductPage</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">createPOMObjects</span>
-                <span class="method-start">107996 ms</span>
+                <span class="method-start">107153 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">searchProduct</span>
-                <span class="method-start">108192 ms</span>
+                <span class="method-start">107280 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyaddToCart</span>
-                <span class="method-start">145196 ms</span>
+                <span class="method-start">143643 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">screenshot([TestResult name=verifyaddToCart status=SUCCESS method=ToVerifyProductPage.verifyaddToCart()[pri:1, ...)</span>
-                <span class="method-start">178988 ms</span>
+                <span class="method-start">170181 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">searchProduct</span>
-                <span class="method-start">178990 ms</span>
+                <span class="method-start">170183 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyBuyNowButton</span>
-                <span class="method-start">235108 ms</span>
+                <span class="method-start">197157 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">screenshot([TestResult name=verifyBuyNowButton status=SUCCESS method=ToVerifyProductPage.verifyBuyNowButton()[p...)</span>
-                <span class="method-start">258496 ms</span>
+                <span class="method-start">217933 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">searchProduct</span>
-                <span class="method-start">258502 ms</span>
+                <span class="method-start">217936 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyAddtoWishListButton</span>
-                <span class="method-start">283710 ms</span>
+                <span class="method-start">239388 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">screenshot([TestResult name=verifyAddtoWishListButton status=SUCCESS method=ToVerifyProductPage.verifyAddtoWish...)</span>
-                <span class="method-start">314443 ms</span>
+                <span class="method-start">254510 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">cleanPOMObjects</span>
-                <span class="method-start">314445 ms</span>
+                <span class="method-start">254511 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TempTestNg2.ToVerifyAllTab</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closedBrowser</span>
-                <span class="method-start">314446 ms</span>
+                <span class="method-start">254512 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TestPack.ToVerifyFacebookHomePage</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closedBrowser</span>
-                <span class="method-start">315894 ms</span>
+                <span class="method-start">255576 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">TempTestNg2.ToVerifyProductPage</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closedBrowser</span>
-                <span class="method-start">317020 ms</span>
+                <span class="method-start">258331 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
